<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.project_1.MainActivity">
    <item
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/light_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/light_theme"
        app:showAsAction="never" />
    <item
        android:id="@+id/dark_theme"
        android:orderInCategory="100"
        android:title="@string/dark_theme"
        app:showAsAction="never" />
</menu>